--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Piervito Creanza",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.5.7",
+    "socket.io": "^2.3.0"
   }
 }
